--- a/src/components/ui/Button/Button.module.sass
+++ b/src/components/ui/Button/Button.module.sass
@@ -1,6 +1,6 @@
 .btn
   color: #ffffff
-  background-color: #007BFF
+  background-color: #007bff
   font-size: 1em
   font-weight: 500
   font-family: inherit
